<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:background="#00000000"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/open_record_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/confirm_dialog_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/available_version_is"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/confirm_dialog_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:text="Do you want to update application now?"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/confirm_dialog_header"
                app:layout_constraintStart_toStartOf="@+id/confirm_dialog_header"
                app:layout_constraintTop_toBottomOf="@+id/confirm_dialog_header" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_dialog_message">

                <Button
                    android:id="@+id/download_update_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#212121"
                    android:padding="12dp"
                    android:text="@string/download"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:strokeColor="#666666"
                    app:strokeWidth="2dp" />

                <Button
                    android:id="@+id/close_dialog_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="14dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#212121"
                    android:padding="12dp"
                    android:text="@string/later"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:strokeColor="#666666"
                    app:strokeWidth="2dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <Button
                    android:id="@+id/disable_update_reminder_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/grey"
                    android:padding="12dp"
                    android:text="@string/don_t_remind_me_to_update"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="#666666"
                    app:strokeWidth="2dp" />
            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>