<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#00000000"
    android:layout_margin="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/open_record_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Spinner
                android:id="@+id/record_type_spinner"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/open_record_background"
                android:fontFamily="@font/opensans_variablefont"
                android:gravity="center"
                android:text="@string/type_of_record"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/close_dialog_24dp"
                android:layout_margin="10dp"
                android:scaleType="centerInside"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/white" />

            <View
                android:id="@+id/top_strip"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/save_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:maxWidth="50dp"
                android:scaleType="centerInside"
                android:src="@drawable/save_record_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/close_button"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <EditText
                android:id="@+id/header_input"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/open_record_background"
                android:hint="@string/header"
                android:fontFamily="@font/opensans_variablefont"
                android:inputType="text"
                android:maxHeight="30dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/content_input"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/open_record_background"
                android:hint="@string/content"
                android:fontFamily="@font/opensans_variablefont"
                android:inputType="text"
                android:maxHeight="50dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">


            <EditText
                android:id="@+id/description_input"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/open_record_background"
                android:hint="@string/description"
                android:inputType="text"
                android:fontFamily="@font/opensans_variablefont"
                android:maxHeight="100dp"
                android:minHeight="50dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>